# gaisensha

./: .gitignore  CMakeLists.txt  classes.cpp  doxyconf  doxyconf~  gaisensha.cpp  gaisensha.h  gaisensha.kdev4  gaisensha.pro  main.cpp
.kdev4/: _custom.kdev4  gaisensha.kdev4
docs/0.1/html/: annotated.html  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  graph_legend.md5  index.html
docs/0.1/html/d2/d41/: classbid__offer-members.html
docs/0.1/html/d3/d6b/: classes_8cpp__incl.map  classes_8cpp__incl.md5
docs/0.1/html/d3/da6/: classbid__offer.html
docs/0.1/html/d5/d76/: classdsp.html
docs/0.1/html/d7/d1d/: classes_8cpp__dep__incl.map  classes_8cpp__dep__incl.md5
docs/0.1/html/da/dce/: main_8cpp__incl.map  main_8cpp__incl.md5
docs/0.1/html/db/d52/: classdsp-members.html
docs/0.1/html/dc/d66/: classes_8cpp.html  classes_8cpp_source.html
docs/0.1/html/df/d0a/: main_8cpp.html  main_8cpp_a0ddf1224851353fc92bfbff6f499fa97_cgraph.map  main_8cpp_a0ddf1224851353fc92bfbff6f499fa97_cgraph.md5  (+3 more)
docs/0.1/html/search/: all_62.js  all_63.js  all_64.js  all_70.js  classes_62.js  classes_64.js  search.js  variables_62.html  variables_62.js  variables_64.html  variables_64.js  variables_78.html  variables_78.js
src/: affiliate.cpp  affiliate.h  bid_offer.cpp  bid_offer.h  bit_power.cpp  bit_power.h  campaign.cpp  campaign.h  funkz.cpp  funkz.h  impression.cpp  impression.h  in_handler_we_trust.cpp  in_handler_we_trust.h  ttl.h
tests/: CMakeLists.txt  gaisenshaTest.cpp  gaisenshaTest.h
